--- a/setup/docker-compose.yml
+++ b/setup/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '2'
+version: '3'
 services:
-  zk4kafka_01:
-    image: confluentinc/cp-zookeeper:3.1.0
-    container_name: zk4kafka_01
+  zk4kafka-01-s:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zk4kafka-01-c
     environment:
       ZOOKEEPER_SERVER_ID: 1
       ZOOKEEPER_CLIENT_PORT: 33472
@@ -10,26 +10,28 @@ services:
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
       ZOOKEEPER_SERVERS: localhost:33477:33478
-    ports:
-    - "33472/tcp:33472/tcp"
+    network_mode: host
     restart: always
-  kafka_01:
-    image: confluentinc/cp-kafka:3.1.0
-    container_name: kafka_01
+  kafka-01-s:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka-01-c
     depends_on:
-      - zk4kafka_01
+      - zk4kafka-01-s
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zk4kafka_01:33472
+      KAFKA_ZOOKEEPER_CONNECT: localhost:33472
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
       KAFKA_DELETE_TOPIC_ENABLE: 'true'
-    ports:
-    - "9092/tcp:9092/tcp"
+    network_mode: host
     restart: always
-  cas_01_test:
-    image: cassandra:2.1
-    ports:
-      - "9042/tcp:9042/tcp"
-      - "7199/tcp:7199/tcp"
-    container_name: cas_01_test
+  cas-01-s:
+    image: cassandra:3
+    network_mode: host
+    container_name: cas-01-c
+    restart: always
+#  avro-producer-s:
+#    image: ansrivas/avro-producer:latest
+#    container_name: avro-producer-c
+#    build: .
+#    network_mode: host
