--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ User-specific stuff:
 .idea/tasks.xml
 #
 Sensitive or high-churn files:
+.idea*
 .idea/dataSources/
 .idea/dataSources.ids
 .idea/dataSources.xml
